fixed overflow error

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -5,7 +5,7 @@
 html {
     font-size: 125%;
     margin: 0;
-    overflow: hidden;
+    overflow-y: auto;
 }
 
 body {
@@ -21,7 +21,6 @@ body {
     align-items: center;
     height: 100vh;
     max-height: 100vh;
-    overflow-y: scroll;
 }
 
 img {
